# Argyle-Scanning-Task---Programming

./: Dockerfile  README.md  argyle_test.db  bypass_antiscraping_methods.py  pyproject.toml  spider.py
src/: .env  __init__.py  spider.py  validade_scraped_data.py
tests/: test_bypass_antiscraping_methods.py
