[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "src"
author = "Vinícius Oliveira de Aguiar"
author-email = "viniciusoa@protonmail.com"
home-page = "https://github.com/viniciusao/Argyle-Scanning-Task---Programming"
requires = [
    "scrapfly-sdk==0.7.11",
    "beautifulsoup4==4.10.0",
    "httpx==0.19.0",
    "python-dotenv==0.19.0",
    "aiosqlite==0.17.0",
    "pydantic==1.8.2"
]
requires-python = ">=3.6"
